# BassRGB

./: README.md
Car Audio/: README.md
Windows/C++/: README.md
Windows/C++/BassRGBWin/: BassRGBWin.sln  BassRGBWin.vcxproj  BassRGBWin.vcxproj.filters  CMakeLists.txt  CMakeSettings.json
Windows/C++/BassRGBWin/src/: BassRGBWin.cpp  lpf.cpp  lpf.h
Windows/Python/: BassRGBWin.py  README.md
